[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-openenv"
version = "1.1.0"
description = "Seeded warehouse inventory benchmark for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.1",
    "uvicorn>=0.29.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "openai>=1.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "graders*", "server*"]
